force-app/main/default/objects/Outreach_Rule__mdt/Outreach_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Outreach Rule</label>
    <pluralLabel>Outreach Rules</pluralLabel>
    <description>DEV-4536: Declarative outreach need rules evaluated by the patient outreach engine.</description>
</CustomObject>