force-app/main/default/objects/Outreach_Rule__mdt/fields/Action_Description__c.field-meta.xml
<CustomField>
    <fullName>Action_Description__c</fullName>
    <description>Plain-language context for what PES should do when this rule is the focus.</description>
    <label>Action Description</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>