force-app/main/default/objects/Outreach_Rule__mdt/fields/Auto_Send_Email__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_Email__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eligible for Prefetch daily Email when consent allows.</description>
    <label>Auto Send Email</label>
    <type>Checkbox</type>
</CustomField>