force-app/main/default/objects/Outreach_Rule__mdt/fields/Auto_Send_SMS__c.field-meta.xml
<CustomField>
    <fullName>Auto_Send_SMS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Eligible for Prefetch daily SMS when consent allows.</description>
    <label>Auto Send SMS</label>
    <type>Checkbox</type>
</CustomField>