force-app/main/default/objects/Outreach_Rule__mdt/fields/Bypass_Pressure_Gate__c.field-meta.xml
<CustomField>
    <fullName>Bypass_Pressure_Gate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, this care item may enter the Unclaimed queue even if Account Pressure_Score is at/above the block threshold. May shorten weekly cooldown to 1 day; still once-per-day contact max.</description>
    <label>Bypass Pressure Gate</label>
    <type>Checkbox</type>
</CustomField>