force-app/main/default/objects/Outreach_Rule__mdt/fields/Cadence_Policy__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Policy__c</fullName>
    <description>DeveloperName of Cadence_Policy__mdt record.</description>
    <label>Cadence Policy</label>
    <length>80</length>
    <type>Text</type>
</CustomField>