force-app/main/default/objects/Outreach_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <length>80</length>
    <type>Text</type>
</CustomField>