force-app/main/default/objects/Outreach_Rule__mdt/fields/Clarion_Eligible__c.field-meta.xml
<CustomField>
    <fullName>AI_Outreach_Eligible__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, AI_Outreach AI may dial open care items for this rule (AWV / No Next follow-up). Unengaged and other rules stay false.</description>
    <label>AI_Outreach Eligible</label>
    <type>Checkbox</type>
</CustomField>