force-app/main/default/objects/Outreach_Rule__mdt/fields/Clinical_Priority__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Priority__c</fullName>
    <defaultValue>false</defaultValue>
    <description>May override topic OptOut only; never hard stops (STOP, AI_Outreach opt-out, DNC, full silence).</description>
    <label>Clinical Priority</label>
    <type>Checkbox</type>
</CustomField>