force-app/main/default/objects/Outreach_Rule__mdt/fields/Communication_Class__c.field-meta.xml
<CustomField>
    <fullName>Communication_Class__c</fullName>
    <description>Marketing or Transactional. Used for audit and preference-link type.</description>
    <label>Communication Class</label>
    <type>Text</type>
    <length>40</length>
</CustomField>