force-app/main/default/objects/Outreach_Rule__mdt/fields/Communication_Topic__c.field-meta.xml
<CustomField>
    <fullName>Communication_Topic__c</fullName>
    <description>Preference-center topic key (marketing, appointment_reminders, surveys, educational).</description>
    <label>Communication Topic</label>
    <length>80</length>
    <type>Text</type>
</CustomField>