force-app/main/default/objects/Outreach_Rule__mdt/fields/Counts_As_Outreach__c.field-meta.xml
<CustomField>
    <fullName>Counts_As_Outreach__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, digital send consumes weekly human outreach cooldown / holds PES. Default false.</description>
    <label>Counts As Outreach</label>
    <type>Checkbox</type>
</CustomField>