force-app/main/default/objects/Outreach_Rule__mdt/fields/Display_Label__c.field-meta.xml
<CustomField>
    <fullName>Display_Label__c</fullName>
    <description>Business-friendly label shown in Rule Studio and ops UI.</description>
    <label>Display Label</label>
    <length>120</length>
    <type>Text</type>
</CustomField>