force-app/main/default/objects/Outreach_Rule__mdt/fields/Effective_Start__c.field-meta.xml
<CustomField>
    <fullName>Effective_Start__c</fullName>
    <label>Effective Start</label>
    <type>Date</type>
</CustomField>