force-app/main/default/objects/Outreach_Rule__mdt/fields/Family__c.field-meta.xml
<CustomField>
    <fullName>Family__c</fullName>
    <description>Business family for grouping variants (NO_NEXT, UNENGAGED, AWV, OFF_CADENCE).</description>
    <label>Rule Family</label>
    <length>40</length>
    <type>Text</type>
</CustomField>