force-app/main/default/objects/Outreach_Rule__mdt/fields/Force_Acknowledge__c.field-meta.xml
<CustomField>
    <fullName>Force_Acknowledge__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, agent must explicitly confirm this need was addressed before logging outcome.</description>
    <label>Force Acknowledge</label>
    <type>Checkbox</type>
</CustomField>