force-app/main/default/objects/Outreach_Rule__mdt/fields/Need_Type__c.field-meta.xml
<CustomField>
    <fullName>Need_Type__c</fullName>
    <label>Need Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>