force-app/main/default/objects/Outreach_Rule__mdt/fields/Override_Daily_Attempt_Limit__c.field-meta.xml
<CustomField>
    <fullName>Override_Daily_Attempt_Limit__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, allow more than one contact attempt per day for this rule.</description>
    <label>Override Daily Attempt Limit</label>
    <type>Checkbox</type>
</CustomField>