force-app/main/default/objects/Outreach_Rule__mdt/fields/Override_Weekly_Queue_Cooldown__c.field-meta.xml
<CustomField>
    <fullName>Override_Weekly_Queue_Cooldown__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true, bypass the default once-per-week queue cooldown for this rule.</description>
    <label>Override Weekly Queue Cooldown</label>
    <type>Checkbox</type>
</CustomField>