force-app/main/default/objects/Outreach_Rule__mdt/fields/Recommended_Action__c.field-meta.xml
<CustomField>
    <fullName>Recommended_Action__c</fullName>
    <description>Short call-to-action shown as Recommended Action (optional).</description>
    <label>Recommended Action</label>
    <length>255</length>
    <type>Text</type>
</CustomField>