force-app/main/default/objects/Outreach_Rule__mdt/fields/Required_Appointment_Types__c.field-meta.xml
<CustomField>
    <fullName>Required_Appointment_Types__c</fullName>
    <label>Required Appointment Types</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>