force-app/main/default/objects/Outreach_Rule__mdt/fields/Rule_Id__c.field-meta.xml
<CustomField>
    <fullName>Rule_Id__c</fullName>
    <label>Rule Id</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>