force-app/main/default/objects/Outreach_Rule__mdt/fields/Served_Teams__c.field-meta.xml
<CustomField><fullName>Served_Teams__c</fullName><fieldManageability>DeveloperControlled</fieldManageability><label>Served Teams</label><length>1000</length><type>LongTextArea</type><visibleLines>4</visibleLines></CustomField>