force-app/main/default/objects/Outreach_Rule__mdt/fields/Shadow_Only__c.field-meta.xml
<CustomField>
    <fullName>Shadow_Only__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Shadow Only</label>
    <type>Checkbox</type>
</CustomField>