force-app/main/default/objects/Outreach_Rule__mdt/fields/Supersedes_Families__c.field-meta.xml
<CustomField>
    <fullName>Supersedes_Families__c</fullName>
    <description>Comma-separated family keys this rule hides when active (e.g. NO_NEXT).</description>
    <label>Supersedes Families</label>
    <length>255</length>
    <type>Text</type>
</CustomField>