force-app/main/default/objects/Outreach_Rule__mdt/fields/Use_Global_Cadence__c.field-meta.xml
<CustomField>
    <fullName>Use_Global_Cadence__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, cadence knobs hydrate from Outreach_Engine_Settings / DEFAULT_WEEKLY on publish.</description>
    <label>Use Global Cadence</label>
    <type>Checkbox</type>
</CustomField>