force-app/main/default/objects/Outreach_Rule__mdt/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>